2009-12-09  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl (UpdateAnnouncement): Replace generic
	"package" with readl package name.

	* bin/cygbuild.sh: (PackageUsesLibtoolMain): Adjust regexp '\blibtool\b'
	to '\blibtoo' to notice "INTL_LIBTOOL_SUFFIX_PREFIX"
	(CygbuildCommandMainCheckSpecial): Add alias ls-patch.
	(CygbuildCmdDownloadCygwinPackage): Use setup-2.ini for Cygwin 1.7

2009-12-08  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildInstallFixInterpreterMain): Correct
	first line 'Suspicious Python' check. See if the line is comment.

2009-11-27  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildObjDumpLibraryDepList): ignore Cygwin
	1.7 MPR.DLL.

2009-10-22  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/libcheck.sh:
	(CygbuildCmdInstallCheckSetupHintFieldCategory): Add a missing
	backslash to continued line CYGBUILD_SETUP_HINT_CATEGORY.

	* bin/template/Makefile.ex (maintainer-clean): New.
	Add comments to all *clean targets.

2009-09-30  Jari Aalto  <jari.aalto@cante.net>

	* bin/template/Makefile.redirect.ex: Remove extra variables
	and shape up.

	* bin/lib/cygbuild.pl (Help): Work around Perl bug in
	pod2text. Change option presentation to notation
	'-o, --option'.

	* bin/lib/libcheck.sh: (top level): change all
	tail/head command to use --lines=N option.
	(CygbuildCmdInstallCheckBinFiles): Correct *Waen() call to
	(CygbuildPythonLibraryDependsCache): Generate cache.
	(CygbuildRubyLibraryDependsMain): Generate cache.

	*Warn().
	(CygbuildCmdInstallCheckSetupHintDependExists): search
	for exact library match. On failure, show close library
	matches.
	(CygbuildPerlLibraryDependsMain): Generate Perl cache.

	* bin/cygbuild.sh:  (top level): change all
	tail/head command to use --lines=N option.
	(CygbuildChmodExec): Return correct status.
	(CygbuildPostinstallWriteStanza): remove
	CygbuildChmodExec(). Add more quoting.
	(CygbuildInstallCygwinPartPostinstall): Install
	with modes 755, not 644.